# fastapi_ecommerce

./: Procfile  README.md  pyproject.toml  requirements.txt
scripts/: create_super_user.py  drop_collections.py  get_img_unsplash.py  seed_database.py
scripts/sample_data/: musical_instruments_and_category.csv  products.json  users.json
src/: .env.example  main.py
src/api/config/: __base_config.py  database.py
src/api/models/: __init__.py  orders.py  products.py  users.py
src/api/routes/: __init__.py  auth.py  orders.py  products.py  users.py
src/api/securtity/: __init__.py  authentication.py  authorization.py
src/api/services/: __init__.py  auth.py  orders.py  products.py  users.py
src/api/utils/: __init__.py  query_filter.py  serialize.py  validation.py
tests/: conftest.py  pytest.ini
tests/auth/: test_authenticated_user_auth.py  test_login_auth.py
tests/products/: conftest.py  test_create_product.py  test_delete_product.py  test_get_all_active_products.py  test_get_all_deleted_products.py  test_get_all_products.py  test_get_one_product.py  test_update_product.py
tests/users/: conftest.py  test_create_user.py  test_delete_user.py  test_get_all_active_users.py  test_get_all_deleted_user.py  test_get_all_user.py  test_get_one_user.py  test_update_user.py
