[tool.poetry]
name = "fastapi_ecommerce"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pymongo = {extras = ["srv"], version = "^4.10.1"}
pydantic-mongo = "^2.3.0"
fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
