[tool.poetry]
name = "fastapi_ecommerce"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pymongo = {extras = ["srv"], version = "^4.10.1"}
pydantic-mongo = "^2.3.0"
fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
jsonschema = "^4.23.0"
ptpython = "^3.0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
